--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
 
+    ion-content{
+        background-color:cadetblue !important;
+    }
+
+    ion-title{
+        background-color:darkcyan;
+    }
 }
